Turn back on commits.

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,19 +16,19 @@ jobs:
           # Disabling shallow clone is recommended for improving relevancy of reporting
           fetch-depth: 0
       - name: Conventional Changelog Action
+        id: release
         uses: TriPSs/conventional-changelog-action@v3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
-          skip-commit: "true"
           #- id: release
           #  uses: rymndhng/release-on-push-action@v0.15.0
           #  with:
           #    bump_version_scheme: patch
 
-          #- name: Check Output Parameters
-          #  run: |
-          #    echo "Got tag name ${{ steps.release.outputs.tag_name }}"
-          #    echo "Got release version ${{ steps.release.outputs.version }}"
+      - name: Check Output Parameters
+        run: |
+          echo "Got tag name ${{ steps.release.outputs.tag }}"
+          echo "Got release version ${{ steps.release.outputs.version }}"
 
           #- uses: actions/checkout@v2
           #  with:
