--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -20,6 +20,7 @@ jobs:
         uses: TriPSs/conventional-changelog-action@v3
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
+          skip-on-empty: 'false'
           #- id: release
           #  uses: rymndhng/release-on-push-action@v0.15.0
           #  with:
