--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,6 +32,15 @@ jobs:
           echo "Got tag name ${{ steps.release.outputs.tag }}"
           echo "Got release version ${{ steps.release.outputs.version }}"
 
+      - name: Create Release
+        uses: actions/create-release@v1
+        if: ${{ steps.changelog.outputs.skipped == 'false' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ steps.changelog.outputs.tag }}
+          release_name: ${{ steps.changelog.outputs.tag }}
+          body: ${{ steps.changelog.outputs.clean_changelog }}
           #- uses: actions/checkout@v2
           #  with:
           #    # Disabling shallow clone is recommended for improving relevancy of reporting
