--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,6 +21,9 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           output-file: 'false'
+          release-count: 0
+          fallback-version: 1.0.4
+          skip-on-empty: 'false'
           #- id: release
           #  uses: rymndhng/release-on-push-action@v0.15.0
           #  with:
