--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,6 +23,7 @@ jobs:
           fallback-version: 1.0.5
           skip-on-empty: 'false'
           output-file: 'false'
+          release-count: 0
           #- id: release
           #  uses: rymndhng/release-on-push-action@v0.15.0
           #  with:
