--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -24,6 +24,7 @@ jobs:
           skip-on-empty: 'false'
           output-file: 'false'
           release-count: 0
+          skip-commit: 'true'
           #- id: release
           #  uses: rymndhng/release-on-push-action@v0.15.0
           #  with:
