--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -11,6 +11,11 @@ jobs:
     env:
       GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     steps:
+      - uses: actions/checkout@v2
+        with:
+          # Disabling shallow clone is recommended for improving relevancy of reporting
+          fetch-depth: 0
+          
       - name: NPM build
         uses: actions/setup-node@v1
         with:
