--- a/.github/workflows/dev.yaml
+++ b/.github/workflows/dev.yaml
@@ -25,12 +25,11 @@ jobs:
           VER="${{ steps.release.outputs.tag_name }}"
           (mkdir sbin)
           (cp index.js sbin/)
-          (cd sbin && zip -mqj file.zip index.js)
 
       - uses: meeDamian/github-release@2.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag: edge
-          files: sbin/
+          files: sbin/index.js
           allow_override: 'true'
           prerelease: 'true'
